--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -8,21 +8,13 @@
     },
     "main.css": {
       "files": [
-        "styles/main.scss"
+        "styles/main.styl"
       ],
       "main": true
-    },
-    "editor-style.css": {
-      "files": [
-        "styles/editor-style.scss"
-      ]
     },
     "jquery.js": {
       "bower": ["jquery"]
     },
-    "modernizr.js": {
-      "bower": ["modernizr"]
-    }
   },
   "config": {
     "devUrl": "http://example.dev"
