--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -2,8 +2,7 @@
   "dependencies": {
     "main.js": {
       "files": [
-        "scripts/main.js",
-        "scripts/customizer.js"
+        "scripts/main.js"
       ],
       "main": true
     },
@@ -13,11 +12,16 @@
       ],
       "main": true
     },
+    "customizer.js": {
+      "files": [
+        "scripts/customizer.js"
+      ]
+    },
     "jquery.js": {
       "bower": ["jquery"]
     }
   },
   "config": {
-    "devUrl": "http://example.dev"
+    "devUrl": "http://kroon-magazine.dev"
   }
 }
