Reset own style

--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -8,7 +8,7 @@
     },
     "main.css": {
       "files": [
-        "styles/main.scss"
+        "styles/main.styl"
       ],
       "main": true
     },
